--- a/src/component/antd/css/AntdDemo1.css
+++ b/src/component/antd/css/AntdDemo1.css
@@ -1,12 +1,31 @@
 .topNav li{
-    display: inline-block;
     margin-left: 20px;
     padding-top: 30px;
     font-size: 20px;
+    text-decoration:underline;
+    display: inline-block;
+    
+}
+.topNav a{
+    color:#000 !important;
 }
 .topNav{
     margin-left: 20px;
+    margin-bottom: 30px;
 }
 .videoContent{
     margin-left: 40px;
 }
+
+
+.ant-carousel .slick-slide {
+    text-align: center;
+    height: 160px;
+    line-height: 160px;
+    background: #364d79;
+    overflow: hidden;
+  }
+  
+  .ant-carousel .slick-slide h3 {
+    color: #fff;
+  }
